<resources>
    <string name="app_name">Crossword Magic</string>
    <string name="placeholder_text">"Number of Words in Default Puzzle: "</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clue_header_across">Across</string>
    <string name="clue_header_down">Down</string>
    <string name="dialog_title">Enter Guess</string>
    <string name="empty">""</string>
    <string name="across">Across</string>
    <string name="down">Down</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="correct_guess">Congrats, you guessed correctly!</string>
    <string name="incorrect_guess">Sorry, incorrect guess!</string>
    <string name="button_play">Play Puzzle</string>
    <string name="crossword_magic_cover">Crossword Magic Poster Cover</string>
    <string name="get_new_puzzles">Get New Puzzles</string>
    <string name="download_and_play">Download and Play</string>
</resources>